# thinking-model-training-demo

./: .gitignore  README.md  Untitled1.ipynb  config.json  main.py  pyproject.toml  todo.md
src/: dataset_utils.py  evaluate_model.py  generate_traces.py  model_utils.py  reward_functions.py  tr_config.py  train_grpo.py  train_sft.py  wandb_utils.py
